[project]
name = "streamlit-excel-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flagembedding>=1.4.0",
    "google-genai>=2.10.0",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "streamlit>=1.59.0",
]
